API changes Refactoring of soap-client Fixing proxy problems Changing soap-client to use httpclient